-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9
-
7ca5b32a7 (dev), a4a5b12d3 (6.8), ea6b24b71 (tqtc/lts-6.5)
the gstreamer-based QMediaRecorder does not work when audio input is present.
- use camera example
- "record"
observations:
- progress stops after 3s
- the underlying file is created, but remains empty
- is duplicated by
-
QTBUG-130894 [Boot2Qt] The widgets camera app gets stuck when trying to record the video
-
- Closed
-
For Gerrit Dashboard: QTBUG-130387 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
600662,4 | GStreamer: MediaCaptureSession - reconfigure pipeline when recording starts | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
600837,2 | GStreamer: MediaCaptureSession - reconfigure pipeline when recording starts | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
601016,2 | GStreamer: MediaCaptureSession - reconfigure pipeline when recording starts | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |