GStreamer: MediaCaptureSession - reconfigure pipeline when recording starts

It seems that we need to send an explicit reconfigure event to make sure
that the encoder properly starts. Otherwise we end up with a 0-byte
file.

Fixes: QTBUG-130387
Change-Id: I61d058a965e5ec0dda8ee4f7f7bde6784c6a03dd
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 7ca5b32a7d1c11610988b08aca0ceb4613f78ba6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a4a5b12d3d708bf9706f7012f35f0c69b2f19003)